updated chronometer onpause rotation

--- a/app/src/main/res/layout/activity_play.xml
+++ b/app/src/main/res/layout/activity_play.xml
@@ -30,17 +30,11 @@
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true"/>
 
-        <!--<View-->
-            <!--android:id="@+id/remaining_circle"-->
-            <!--android:layout_width="70dp"-->
-            <!--android:layout_height="70dp"-->
-            <!--android:background="@drawable/remaining_circle"-->
-            <!--android:layout_centerInParent="true"/>-->
-
-        <com.swipeacademy.multiplicationtableswipe.Util.Circle
-            android:id="@+id/time_cicle"
+        <View
+            android:id="@+id/remaining_circle"
             android:layout_width="70dp"
             android:layout_height="70dp"
+            android:background="@drawable/remaining_circle"
             android:layout_centerInParent="true"/>
 
         <ImageButton
