--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:ads="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -24,16 +25,21 @@
 
     </android.support.v7.widget.Toolbar>
 
+    <com.google.android.gms.ads.AdView
+        android:id="@+id/history_adView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        ads:adSize="BANNER"
+        ads:adUnitId="@string/banner_ad_unit_id"/>
+
     <android.support.v4.view.ViewPager
         android:id="@+id/history_viewPager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/history_toolbar">
-
+        android:layout_below="@id/history_toolbar"
+        android:layout_above="@id/history_adView">
     </android.support.v4.view.ViewPager>
-
-
-
 
 
 </RelativeLayout>
