--- a/app/src/main/res/layout/activity_practice_recycler_item.xml
+++ b/app/src/main/res/layout/activity_practice_recycler_item.xml
@@ -6,20 +6,21 @@
     android:elevation="4dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    app:cardCornerRadius="5dp">
+    app:cardCornerRadius="10dp">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="125dp"
+        android:layout_height="100dp"
         android:orientation="vertical">
 
     <TextView
         android:id="@+id/practice_recycler_item_textView"
         style="@style/Base.TextAppearance.AppCompat.Display3"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="80dp"
         android:gravity="center"
         android:textStyle="bold"
+        android:fontFamily="cursive"
         android:background="@color/colorPrimary"
         android:textColor="#FFF"
         tools:text="1" />
@@ -30,7 +31,7 @@
             android:layout_height="25dp"
             android:paddingLeft="10dp"
             android:paddingStart="10dp"
-            android:background="@color/colorPrimary"
+            android:background="@color/colorPrimaryDark"
             android:textStyle="bold"
             android:textColor="#FFF"
             tools:text="Ones Table"/>
