--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -5,7 +5,7 @@
     android:id="@+id/chart_card"
     android:layout_margin="1dp"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     williamchart:cardBackgroundColor="#FFF"
     williamchart:cardCornerRadius="2dp">
 
@@ -16,10 +16,10 @@
     <com.db.chart.view.LineChartView
         android:id="@+id/history_lineChart"
         android:layout_width="match_parent"
-        android:layout_height="300dp"
+        android:layout_height="match_parent"
         android:layout_marginBottom="15dp"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp"
+        android:layout_marginLeft="6dp"
+        android:layout_marginRight="6dp"
         williamchart:chart_axis="false"
         williamchart:chart_axisBorderSpacing="15dp"
         williamchart:chart_labelColor="#6a84c3" />
