--- a/app/src/main/res/layout-land/activity_home.xml
+++ b/app/src/main/res/layout-land/activity_home.xml
@@ -34,20 +34,23 @@
         android:layout_height="match_parent"
         android:layout_below="@id/home_toolbar"
         android:layout_above="@id/home_adView"
-        android:orientation="vertical">
+        android:layout_margin="20dp"
+        android:orientation="horizontal">
 
         <include
             android:id="@+id/included_home_play_card"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
             layout="@layout/home_play_card" />
 
         <LinearLayout
             android:orientation="horizontal"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
+            android:layout_weight="1"
             android:layout_height="match_parent"
             android:layout_marginLeft="20dp"
-            android:layout_marginStart="20dp"
-            android:layout_marginEnd="20dp"
-            android:layout_marginRight="20dp">
+            android:layout_marginStart="20dp">
 
             <android.support.v7.widget.CardView
                 xmlns:android="http://schemas.android.com/apk/res/android"
