--- a/app/src/main/res/layout/home_play_card.xml
+++ b/app/src/main/res/layout/home_play_card.xml
@@ -6,26 +6,26 @@
     android:layout_width="match_parent"
     android:layout_height="200dp"
     android:layout_margin="20dp"
+    android:foreground="?android:attr/selectableItemBackground"
+    android:clickable="true"
     app:cardCornerRadius="5dp">
     
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
+        android:layout_height="match_parent"
+        android:gravity="center_vertical"
+        android:background="@color/colorPrimary"
         android:orientation="vertical">
 
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
             android:layout_gravity="center_horizontal"
-            android:src="@drawable/playicon"/>
+            android:src="@drawable/icons8playaccent"/>
 
         <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
-            android:textSize="20sp"
-            android:textStyle="bold"
+            style="@style/home_card_text"
+            android:layout_marginTop="20dp"
             android:text="Lets Play!"/>
 
     </LinearLayout>
