--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,6 @@
 <resources>
 
     <dimen name="play_question_border">5dp</dimen>
+    <dimen name="home_icon">30dp</dimen>
+    <dimen name="home_card_corner_radius">5dp</dimen>
 </resources>
