home under construction

--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -41,12 +41,24 @@
 
     </android.support.design.widget.AppBarLayout>
 
+    <com.google.android.gms.ads.AdView
+        android:id="@+id/history_adView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:background="@color/white"
+        ads:adSize="BANNER"
+        ads:adUnitId="@string/banner_ad_unit_id"/>
+
     <android.support.v4.view.ViewPager
         android:id="@+id/history_viewPager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/appBarLayout">
+        android:layout_below="@id/appBarLayout"
+        android:layout_above="@id/history_adView">
     </android.support.v4.view.ViewPager>
+
+
 
 
 </RelativeLayout>
