--- a/app/src/main/res/layout/activity_practice_recycler_item.xml
+++ b/app/src/main/res/layout/activity_practice_recycler_item.xml
@@ -20,7 +20,6 @@
         android:layout_height="80dp"
         android:gravity="center"
         android:textStyle="bold"
-        android:fontFamily="cursive"
         android:background="@color/colorPrimary"
         android:textColor="#FFF"
         tools:text="1" />
@@ -31,9 +30,9 @@
             android:layout_height="25dp"
             android:paddingLeft="10dp"
             android:paddingStart="10dp"
-            android:background="@color/colorPrimaryDark"
+            android:background="@color/colorAccent"
             android:textStyle="bold"
-            android:textColor="#FFF"
+            android:textColor="@color/white"
             tools:text="Ones Table"/>
 
     </LinearLayout>
