--- a/app/src/main/res/layout-land/activity_home.xml
+++ b/app/src/main/res/layout-land/activity_home.xml
@@ -30,30 +30,26 @@
         android:layout_height="match_parent"
         android:layout_below="@id/home_toolbar"
         android:layout_above="@id/home_adView"
-        android:layout_margin="20dp"
+        android:layout_margin="10dp"
         android:orientation="horizontal">
 
         <include
             android:id="@+id/included_home_play_card"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="1"
+            android:layout_weight="2"
             layout="@layout/home_play_card" />
 
         <LinearLayout
-            android:orientation="horizontal"
+            android:orientation="vertical"
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="20dp"
-            android:layout_marginStart="20dp">
+            android:layout_height="match_parent">
 
             <android.support.v7.widget.CardView
                 xmlns:android="http://schemas.android.com/apk/res/android"
                 android:id="@+id/home_practice_card_view"
-                style="@style/home_card_view"
-                android:layout_marginRight="20dp"
-                android:layout_marginEnd="20dp"
+                style="@style/home_card_view_horizontal"
                 app:cardCornerRadius="@dimen/home_card_corner_radius">
 
                 <LinearLayout
@@ -75,7 +71,7 @@
 
             <android.support.v7.widget.CardView
                 android:id="@+id/home_history_card_view"
-                style="@style/home_card_view"
+                style="@style/home_card_view_horizontal"
                 app:cardCornerRadius="@dimen/home_card_corner_radius">
 
                 <LinearLayout
