--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,5 @@
     <dimen name="play_question_border">5dp</dimen>
     <dimen name="home_icon">30dp</dimen>
     <dimen name="home_card_corner_radius">0dp</dimen>
+    <dimen name="home_play_back_option_card_height">150dp</dimen>
 </resources>
