--- a/app/src/main/res/layout-land/activity_home.xml
+++ b/app/src/main/res/layout-land/activity_home.xml
@@ -50,11 +50,14 @@
             android:orientation="vertical"
             android:layout_width="0dp"
             android:layout_weight="1"
+            android:layout_marginLeft="10dp"
+            android:layout_marginStart="10dp"
             android:layout_height="match_parent">
 
             <android.support.v7.widget.CardView
                 xmlns:android="http://schemas.android.com/apk/res/android"
                 android:id="@+id/home_practice_card_view"
+                android:layout_marginBottom="10dp"
                 style="@style/home_card_view_horizontal"
                 app:cardCornerRadius="@dimen/home_card_corner_radius">
 
