--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -48,13 +48,13 @@
             android:id="@+id/home_play_card_container"
             android:layout_width="match_parent"
             android:layout_height="200dp">
-
         </FrameLayout>
 
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginTop="10dp"
             >
 
             <android.support.v7.widget.CardView
@@ -83,6 +83,8 @@
             <android.support.v7.widget.CardView
                 android:id="@+id/home_history_card_view"
                 style="@style/home_card_view"
+                android:layout_marginLeft="10dp"
+                android:layout_marginStart="10dp"
                 app:cardCornerRadius="@dimen/home_card_corner_radius">
 
                 <LinearLayout
