--- a/app/src/main/res/layout/home_play_card_back.xml
+++ b/app/src/main/res/layout/home_play_card_back.xml
@@ -1,53 +1,85 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="200dp">
 
-    <android.support.v7.widget.CardView
-        android:id="@+id/play_24_option_cardView"
-        android:layout_width="0dp"
-        android:layout_weight="1"
-        android:layout_height="@dimen/home_play_back_option_card_height">
+    <TextView
+        android:id="@+id/select_mode_text_view"
+        android:layout_width="match_parent"
+        android:layout_height="20dp"
+        android:layout_alignParentTop="true"
+        android:gravity="center_horizontal"
+        android:text="Select amount of questions!"
+        android:textStyle="bold" />
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            style="@style/Base.TextAppearance.AppCompat.Display4"
-            android:text="24"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="180dp"
+        android:layout_below="@id/select_mode_text_view"
+        android:orientation="horizontal">
 
-    </android.support.v7.widget.CardView>
+        <android.support.v7.widget.CardView
+            android:id="@+id/play_24_option_cardView"
+            android:layout_width="0dp"
+            android:layout_height="@dimen/home_play_back_option_card_height"
+            android:layout_weight="1"
+            android:foreground="?android:attr/selectableItemBackground"
+            android:layout_marginRight="10dp"
+            android:layout_marginEnd="10dp"
+            app:cardCornerRadius="0dp">
 
-    <android.support.v7.widget.CardView
-        android:id="@+id/play_48_option_cardView"
-        android:layout_width="0dp"
-        android:layout_weight="1"
-        android:layout_height="@dimen/home_play_back_option_card_height">
+            <TextView
+                style="@style/Base.TextAppearance.AppCompat.Display3"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/colorPrimary"
+                android:gravity="center"
+                android:textColor="@color/white"
+                android:text="24" />
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            style="@style/Base.TextAppearance.AppCompat.Display4"
-            android:gravity="center"
-            android:text="48"/>
+        </android.support.v7.widget.CardView>
 
-    </android.support.v7.widget.CardView>
+        <android.support.v7.widget.CardView
+            android:id="@+id/play_48_option_cardView"
+            android:layout_width="0dp"
+            android:layout_height="@dimen/home_play_back_option_card_height"
+            android:layout_weight="1"
+            android:foreground="?android:attr/selectableItemBackground"
+            app:cardCornerRadius="0dp">
 
-    <android.support.v7.widget.CardView
-        android:id="@+id/play_72_option_cardView"
-        android:layout_width="0dp"
-        android:layout_weight="1"
-        android:layout_height="@dimen/home_play_back_option_card_height">
+            <TextView
+                style="@style/Base.TextAppearance.AppCompat.Display3"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/colorPrimaryDark"
+                android:gravity="center"
+                android:textColor="@color/white"
+                android:text="48" />
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            style="@style/Base.TextAppearance.AppCompat.Display4"
-            android:text="72"/>
+        </android.support.v7.widget.CardView>
 
-    </android.support.v7.widget.CardView>
+        <android.support.v7.widget.CardView
+            android:id="@+id/play_72_option_cardView"
+            android:layout_width="0dp"
+            android:layout_height="@dimen/home_play_back_option_card_height"
+            android:layout_weight="1"
+            android:foreground="?android:attr/selectableItemBackground"
+            android:layout_marginLeft="10dp"
+            android:layout_marginStart="10dp"
+            app:cardCornerRadius="0dp">
 
-</LinearLayout>
+            <TextView
+                style="@style/Base.TextAppearance.AppCompat.Display3"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/colorAccent"
+                android:gravity="center"
+                android:textColor="@color/white"
+                android:text="72" />
+
+        </android.support.v7.widget.CardView>
+
+    </LinearLayout>
+
+</RelativeLayout>
