--- a/app/src/main/res/layout-land/activity_play.xml
+++ b/app/src/main/res/layout-land/activity_play.xml
@@ -43,34 +43,24 @@
         android:background="@color/colorAccent"
         android:columnCount="2">
 
-        <Chronometer
-            android:id="@+id/current_time"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="18sp"
-            android:textStyle="bold"
-            android:layout_marginRight="20dp"
-            android:layout_marginEnd="20dp"
-            android:layout_centerHorizontal="true"
-            android:layout_alignParentTop="true"/>
-
         <ImageButton
             android:id="@+id/play_home_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
-            android:background="@color/colorAccent"
+            android:layout_marginBottom="10dp"
+            android:foreground="?android:attr/selectableItemBackground"
+            android:background="@null"
             android:src="@drawable/ic_home_white_36dp"
             android:contentDescription= "@string/click_to_go_home_description" />
 
         <com.swipeacademy.multiplicationtableswipe.Util.Circle
             android:id="@+id/remaining_circle"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="6dp"
-            android:layout_below="@id/current_time"/>
+            android:layout_marginTop="6dp"/>
 
 
         <TextView
@@ -83,8 +73,7 @@
             android:layout_marginTop="6dp"
             android:text="@string/remaining_questions"
             android:gravity="center"
-            android:layout_centerInParent="true"
-            android:layout_below="@id/current_time"/>
+            android:layout_centerHorizontal="true"/>
     </RelativeLayout>
 
     </LinearLayout>
