--- a/app/src/main/res/layout/activity_play.xml
+++ b/app/src/main/res/layout/activity_play.xml
@@ -18,22 +18,10 @@
         android:background="@color/colorAccent"
         android:columnCount="2">
 
-        <Chronometer
-            android:id="@+id/current_time"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="18sp"
-            android:textStyle="bold"
-            android:layout_marginRight="20dp"
-            android:layout_marginEnd="20dp"
-            android:layout_centerVertical="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true"/>
-
         <com.swipeacademy.multiplicationtableswipe.Util.Circle
             android:id="@+id/remaining_circle"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
             android:layout_centerInParent="true"/>
 
         <ImageButton
@@ -44,6 +32,7 @@
             android:layout_marginStart="10dp"
             android:layout_centerVertical="true"
             android:background="@color/colorAccent"
+            android:foreground="?android:attr/selectableItemBackground"
             android:src="@drawable/ic_home_white_36dp"
             android:contentDescription="@string/click_to_go_home_description" />
 
