--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,5 @@
     <dimen name="home_icon">30dp</dimen>
     <dimen name="home_card_corner_radius">0dp</dimen>
     <dimen name="home_play_back_option_card_height">180dp</dimen>
+    <dimen name="widget_margin">8dp</dimen>
 </resources>
