--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -74,4 +74,11 @@
         <item name="android:textColor">@color/white</item>
     </style>
 
+    <style name="widget_big_textView" parent="Base.TextAppearance.AppCompat.Display2">
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:gravity">center</item>
+    </style>
+
 </resources>
