--- a/app/src/main/res/layout-land/activity_home.xml
+++ b/app/src/main/res/layout-land/activity_home.xml
@@ -33,13 +33,6 @@
         android:layout_margin="10dp"
         android:orientation="horizontal">
 
-        <!--<include-->
-            <!--android:id="@+id/included_home_play_card"-->
-            <!--android:layout_width="0dp"-->
-            <!--android:layout_height="match_parent"-->
-            <!--android:layout_weight="2"-->
-            <!--layout="@layout/home_play_card_front" />-->
-
         <FrameLayout
             android:id="@+id/home_play_card_container"
             android:layout_width="0dp"
@@ -67,12 +60,13 @@
 
                     <ImageView
                         style="@style/home_icon"
+                        android:contentDescription="@string/practice_icon"
                         android:src="@drawable/icons8tableaccent"/>
 
                     <TextView
                         style="@style/home_card_text"
                         android:layout_marginTop="20dp"
-                        android:text="Practice"/>
+                        android:text="@string/practice"/>
 
                 </LinearLayout>
 
@@ -89,12 +83,13 @@
 
                     <ImageView
                         style="@style/home_icon"
+                        android:contentDescription="@string/history_icon"
                         android:src="@drawable/icons8museumaccent"/>
 
                     <TextView
                         style="@style/home_card_text"
                         android:layout_marginTop="20dp"
-                        android:text="History"/>
+                        android:text="@string/history"/>
 
                 </LinearLayout>
             </android.support.v7.widget.CardView>
