--- a/app/src/main/res/layout/dialogfragment_play_end.xml
+++ b/app/src/main/res/layout/dialogfragment_play_end.xml
@@ -52,6 +52,7 @@
             android:layout_height="wrap_content"
             android:padding="6dp"
             android:background="?android:attr/selectableItemBackground"
+            android:contentDescription="@string/replay_button"
             android:src="@drawable/ic_replay_white_36dp"/>
 
         <ImageButton
@@ -60,6 +61,7 @@
             android:layout_weight="1"
             android:layout_height="wrap_content"
             android:padding="6dp"
+            android:contentDescription="@string/home_button"
             android:background="?android:attr/selectableItemBackground"
             android:src="@drawable/ic_home_white_36dp"/>
     </LinearLayout>
