--- a/app/src/main/res/layout/home_play_card_back.xml
+++ b/app/src/main/res/layout/home_play_card_back.xml
@@ -10,7 +10,7 @@
         android:layout_height="20dp"
         android:layout_alignParentTop="true"
         android:gravity="center_horizontal"
-        android:text="Select amount of questions!"
+        android:text="@string/select_amount_of_questions"
         android:textStyle="bold" />
 
     <LinearLayout
@@ -36,7 +36,7 @@
                 android:background="@color/colorPrimary"
                 android:gravity="center"
                 android:textColor="@color/white"
-                android:text="24" />
+                android:text="@string/_24" />
 
         </android.support.v7.widget.CardView>
 
@@ -55,7 +55,7 @@
                 android:background="@color/colorPrimaryDark"
                 android:gravity="center"
                 android:textColor="@color/white"
-                android:text="48" />
+                android:text="@string/_48" />
 
         </android.support.v7.widget.CardView>
 
@@ -76,7 +76,7 @@
                 android:background="@color/colorAccent"
                 android:gravity="center"
                 android:textColor="@color/white"
-                android:text="72" />
+                android:text="@string/_72" />
 
         </android.support.v7.widget.CardView>
 
