--- a/app/src/main/res/layout/activity_play.xml
+++ b/app/src/main/res/layout/activity_play.xml
@@ -22,18 +22,18 @@
             android:id="@+id/remaining_circle"
             android:layout_width="80dp"
             android:layout_height="80dp"
-            android:layout_centerInParent="true"/>
+            android:layout_centerInParent="true" />
 
         <ImageButton
             android:id="@+id/play_home_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:layout_marginLeft="10dp"
             android:layout_marginStart="10dp"
             android:layout_centerVertical="true"
             android:background="@color/colorAccent"
             android:foreground="?android:attr/selectableItemBackground"
-            android:src="@drawable/ic_home_white_36dp"
+            android:src="@drawable/ic_home_white_24dp"
             android:contentDescription="@string/click_to_go_home_description" />
 
         <TextView
@@ -44,7 +44,8 @@
             android:textSize="35sp"
             android:textColor="#000"
             android:text="@string/remaining_questions"
-            android:layout_centerInParent="true"/>
+            android:layout_centerInParent="true" />
+
     </RelativeLayout>
 
 
@@ -54,7 +55,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         ads:adSize="BANNER"
-        ads:adUnitId="@string/banner_ad_unit_id"/>
+        ads:adUnitId="@string/banner_ad_unit_id" />
 
     <fragment
         android:id="@+id/play_container"
@@ -64,6 +65,6 @@
         android:layout_below="@id/scores_grid"
         android:layout_above="@id/adView"
         tools:context="com.swipeacademy.multiplicationtableswipe.PlayFragment"
-        tools:layout="@layout/fragment_play"/>
+        tools:layout="@layout/fragment_play" />
 
 </RelativeLayout>
