--- a/app/src/main/res/layout/home_play_card_back.xml
+++ b/app/src/main/res/layout/home_play_card_back.xml
@@ -38,6 +38,15 @@
                 android:textColor="@color/white"
                 android:text="@string/_24" />
 
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom"
+                android:gravity="center_horizontal"
+                android:layout_marginBottom="5dp"
+                android:textSize="12sp"
+                android:text="@string/_5_secs_question"/>
+
         </android.support.v7.widget.CardView>
 
         <android.support.v7.widget.CardView
@@ -56,6 +65,15 @@
                 android:gravity="center"
                 android:textColor="@color/white"
                 android:text="@string/_48" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom"
+                android:gravity="center_horizontal"
+                android:layout_marginBottom="5dp"
+                android:textSize="12sp"
+                android:text="@string/_4_secs_question"/>
 
         </android.support.v7.widget.CardView>
 
@@ -77,6 +95,16 @@
                 android:gravity="center"
                 android:textColor="@color/white"
                 android:text="@string/_72" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom"
+                android:gravity="center_horizontal"
+                android:layout_marginBottom="5dp"
+
+                android:textSize="12sp"
+                android:text="@string/_3_secs_question"/>
 
         </android.support.v7.widget.CardView>
 
