--- a/app/src/main/res/drawable/home_button.xml
+++ b/app/src/main/res/drawable/home_button.xml
@@ -1,17 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
     <corners
         android:topLeftRadius="10dp"
         android:topRightRadius="10dp"
         android:bottomRightRadius="10dp"
-        android:bottomLeftRadius="10dp">
-    </corners>
+        android:bottomLeftRadius="10dp"></corners>
     <stroke
         android:width="3dp"
-        android:color="@color/colorPrimary">
-    </stroke>
+        android:color="@color/colorPrimary"></stroke>
     <gradient
         android:startColor="@color/colorAccent"
-        android:endColor="@color/colorAccent">
-    </gradient>
+        android:endColor="@color/colorAccent"></gradient>
 </shape>
