--- a/app/src/main/res/drawable/swipe_arrow.xml
+++ b/app/src/main/res/drawable/swipe_arrow.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layer-list xmlns:android="http://schemas.android.com/apk/res/android" >
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape>
-            <solid android:color="@android:color/transparent"/>
-            <size android:width="3dp" android:height="50dp"/>
+            <solid android:color="@android:color/transparent" />
+            <size
+                android:width="3dp"
+                android:height="50dp" />
         </shape>
     </item>
 
@@ -12,11 +14,11 @@
             android:fromDegrees="-45"
             android:toDegrees="45">
             <shape android:shape="rectangle">
-                <solid android:color="@color/colorPrimary"/>
+                <solid android:color="@color/colorPrimary" />
                 <corners
                     android:radius="3dp"
                     android:bottomRightRadius="0dp"
-                    android:bottomLeftRadius="0dp"/>
+                    android:bottomLeftRadius="0dp" />
             </shape>
         </rotate>
     </item>
@@ -26,11 +28,11 @@
             android:fromDegrees="45"
             android:toDegrees="45">
             <shape android:shape="rectangle">
-                <solid android:color="@color/colorPrimary"/>
+                <solid android:color="@color/colorPrimary" />
                 <corners
                     android:radius="3dp"
                     android:topRightRadius="0dp"
-                    android:topLeftRadius="0dp"/>
+                    android:topLeftRadius="0dp" />
             </shape>
         </rotate>
     </item>
