--- a/app/src/main/res/drawable/swipe_circle.xml
+++ b/app/src/main/res/drawable/swipe_circle.xml
@@ -1,23 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"     android:shape="rectangle" >
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
     <corners
         android:topLeftRadius="100dp"
         android:topRightRadius="100dp"
         android:bottomLeftRadius="100dp"
-        android:bottomRightRadius="100dp"
-        />
-    <solid
-        android:color="@color/colorAccent"
-        />
+        android:bottomRightRadius="100dp" />
+    <solid android:color="@color/colorAccent" />
     <padding
         android:left="0dp"
         android:top="0dp"
         android:right="0dp"
-        android:bottom="0dp"
-        />
+        android:bottom="0dp" />
     <size
         android:width="65dp"
-        android:height="65dp"
-        />
+        android:height="65dp" />
 
 </shape>
