--- a/app/src/main/res/layout-land/activity_play.xml
+++ b/app/src/main/res/layout-land/activity_play.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:ads="http://schemas.android.com/apk/res-auto"
@@ -9,28 +8,28 @@
     android:layout_height="match_parent"
     android:orientation="horizontal">
 
-<RelativeLayout
-    android:layout_width="0dp"
-    android:layout_weight="5"
-    android:layout_height="match_parent">
+    <RelativeLayout
+        android:layout_width="0dp"
+        android:layout_weight="5"
+        android:layout_height="match_parent">
 
-    <com.google.android.gms.ads.AdView
-        android:id="@+id/adView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        ads:adSize="BANNER"
-        ads:adUnitId="@string/banner_ad_unit_id"/>
+        <com.google.android.gms.ads.AdView
+            android:id="@+id/adView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            ads:adSize="BANNER"
+            ads:adUnitId="@string/banner_ad_unit_id" />
 
-    <fragment
-        android:id="@+id/play_container"
-        android:name="com.swipeacademy.multiplicationtableswipe.PlayFragment"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@id/adView"
-        tools:context="com.swipeacademy.multiplicationtableswipe.PlayFragment"
-        tools:layout="@layout/fragment_play"/>
-</RelativeLayout>
+        <fragment
+            android:id="@+id/play_container"
+            android:name="com.swipeacademy.multiplicationtableswipe.PlayFragment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@id/adView"
+            tools:context="com.swipeacademy.multiplicationtableswipe.PlayFragment"
+            tools:layout="@layout/fragment_play" />
+    </RelativeLayout>
 
     <RelativeLayout
         android:id="@+id/scores_grid"
@@ -45,22 +44,22 @@
 
         <ImageButton
             android:id="@+id/play_home_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
             android:layout_marginBottom="10dp"
             android:foreground="?android:attr/selectableItemBackground"
             android:background="@null"
-            android:src="@drawable/ic_home_white_36dp"
-            android:contentDescription= "@string/click_to_go_home_description" />
+            android:src="@drawable/ic_home_white_24dp"
+            android:contentDescription="@string/click_to_go_home_description" />
 
         <com.swipeacademy.multiplicationtableswipe.Util.Circle
             android:id="@+id/remaining_circle"
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="6dp"/>
+            android:layout_marginTop="6dp" />
 
 
         <TextView
@@ -73,7 +72,7 @@
             android:layout_marginTop="6dp"
             android:text="@string/remaining_questions"
             android:gravity="center"
-            android:layout_centerHorizontal="true"/>
+            android:layout_centerHorizontal="true" />
     </RelativeLayout>
 
-    </LinearLayout>
+</LinearLayout>
