--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -10,18 +10,38 @@
     <android.support.design.widget.AppBarLayout
         android:id="@+id/home_appBar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="150dp"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/home_toolbar"
             style="@style/home_toolbar">
+        </android.support.v7.widget.Toolbar>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical">
 
             <TextView
-                style="@style/home_toolbar_text"
-                android:text="@string/multiplication_table_swipe" />
+                android:id="@+id/app_title"
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:textSize="20sp"
+                android:text="Multiplication Table"
+                android:layout_centerHorizontal="true"/>
 
-        </android.support.v7.widget.Toolbar>
+            <TextView
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:fontFamily="cursive"
+                android:textStyle="bold"
+                android:textSize="35sp"
+                android:text="Swipe!"
+                android:layout_centerHorizontal="true"
+                android:layout_below="@id/app_title" />
+
+        </RelativeLayout>
     </android.support.design.widget.AppBarLayout>
 
     <com.google.android.gms.ads.AdView
@@ -44,6 +64,7 @@
             android:id="@+id/home_play_card_container"
             android:layout_width="match_parent"
             android:layout_height="200dp">
+
         </FrameLayout>
 
         <LinearLayout
@@ -64,11 +85,13 @@
                     <ImageView
                         style="@style/home_icon"
                         android:contentDescription="@string/practice_icon"
-                        android:src="@drawable/icons8tableaccent" />
+                        android:src="@drawable/icons8tableaccent"
+                        android:layout_marginTop="10dp"/>
 
                     <TextView
                         style="@style/home_card_text"
                         android:layout_marginTop="20dp"
+                        android:layout_marginBottom="10dp"
                         android:text="@string/practice" />
 
                 </LinearLayout>
@@ -89,11 +112,13 @@
                     <ImageView
                         style="@style/home_icon"
                         android:contentDescription="@string/history_icon"
-                        android:src="@drawable/icons8museumaccent" />
+                        android:src="@drawable/icons8museumaccent"
+                        android:layout_marginTop="10dp"/>
 
                     <TextView
                         style="@style/home_card_text"
                         android:layout_marginTop="20dp"
+                        android:layout_marginBottom="10dp"
                         android:text="@string/history" />
 
                 </LinearLayout>
