--- a/app/src/main/res/layout/activity_practice_recycler_item.xml
+++ b/app/src/main/res/layout/activity_practice_recycler_item.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -13,16 +12,16 @@
         android:layout_height="100dp"
         android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/practice_recycler_item_textView"
-        style="@style/Base.TextAppearance.AppCompat.Display3"
-        android:layout_width="match_parent"
-        android:layout_height="80dp"
-        android:gravity="center"
-        android:textStyle="bold"
-        android:background="@color/colorPrimary"
-        android:textColor="#FFF"
-        tools:text="1" />
+        <TextView
+            android:id="@+id/practice_recycler_item_textView"
+            style="@style/Base.TextAppearance.AppCompat.Display3"
+            android:layout_width="match_parent"
+            android:layout_height="80dp"
+            android:gravity="center"
+            android:textStyle="bold"
+            android:background="@color/colorPrimary"
+            android:textColor="#FFF"
+            tools:text="1" />
 
         <TextView
             android:id="@+id/practice_recycler_item_title_textView"
@@ -33,7 +32,7 @@
             android:background="@color/colorAccent"
             android:textStyle="bold"
             android:textColor="@color/white"
-            tools:text="Ones Table"/>
+            tools:text="Ones Table" />
 
     </LinearLayout>
 
