--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:williamchart="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/chart_card"
@@ -14,16 +13,16 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-    <com.db.chart.view.LineChartView
-        android:id="@+id/history_lineChart"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginBottom="15dp"
-        android:layout_marginLeft="6dp"
-        android:layout_marginRight="6dp"
-        williamchart:chart_axis="false"
-        williamchart:chart_axisBorderSpacing="15dp"
-        williamchart:chart_labelColor="#6a84c3" />
+        <com.db.chart.view.LineChartView
+            android:id="@+id/history_lineChart"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="15dp"
+            android:layout_marginLeft="6dp"
+            android:layout_marginRight="6dp"
+            williamchart:chart_axis="false"
+            williamchart:chart_axisBorderSpacing="15dp"
+            williamchart:chart_labelColor="#6a84c3" />
 
         <TextView
             android:id="@+id/chart_empty_textView"
@@ -31,7 +30,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:gravity="center_horizontal"
-            tools:text="Play three times to see history."/>
+            tools:text="Play three times to see history." />
 
     </FrameLayout>
 
