--- a/app/src/main/res/layout/fragment_play.xml
+++ b/app/src/main/res/layout/fragment_play.xml
@@ -11,6 +11,13 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <TextView
+            android:id="@+id/countdown_timer_text_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            tools:text="5"/>
+
         <LinearLayout
             android:id="@+id/question_container"
             android:layout_width="250dp"
@@ -52,40 +59,40 @@
                     android:layout_centerInParent="true"
                     android:orientation="horizontal">
 
-                <TextView
-                    android:id="@+id/play_question1"
-                    style="@style/question"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    tools:text="1" />
+                    <TextView
+                        android:id="@+id/play_question1"
+                        style="@style/question"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        tools:text="1" />
 
 
-                <TextView
-                    android:id="@+id/multiplication_sign"
-                    style="@style/question"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:paddingLeft="10dp"
-                    android:paddingRight="10dp"
-                    android:contentDescription="@string/times"
-                    android:text="@string/times_x" />
+                    <TextView
+                        android:id="@+id/multiplication_sign"
+                        style="@style/question"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:paddingLeft="10dp"
+                        android:paddingRight="10dp"
+                        android:contentDescription="@string/times"
+                        android:text="@string/times_x" />
 
-                <TextView
-                    android:id="@+id/play_question2"
-                    style="@style/question"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    tools:text="10" />
+                    <TextView
+                        android:id="@+id/play_question2"
+                        style="@style/question"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        tools:text="10" />
 
-                <TextView
-                    android:id="@+id/equal_sign"
-                    style="@style/question"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:paddingLeft="10dp"
-                    android:paddingStart="10dp"
-                    android:contentDescription="@string/equals_description"
-                    android:text="@string/equals"/>
+                    <TextView
+                        android:id="@+id/equal_sign"
+                        style="@style/question"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:paddingLeft="10dp"
+                        android:paddingStart="10dp"
+                        android:contentDescription="@string/equals_description"
+                        android:text="@string/equals" />
 
                 </LinearLayout>
 
@@ -96,7 +103,7 @@
                 android:id="@+id/question_border_4"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/play_question_border"
-                android:background="@color/questionBorder"  />
+                android:background="@color/questionBorder" />
 
         </LinearLayout>
 
@@ -153,7 +160,7 @@
                 android:layout_height="15dp"
                 android:layout_margin="40dp"
                 android:background="@drawable/swipe_circle"
-                android:layout_centerInParent="true"/>
+                android:layout_centerInParent="true" />
 
             <ImageView
                 android:id="@+id/swipe_arrow_1"
@@ -162,7 +169,7 @@
                 android:src="@drawable/swipe_arrow"
                 android:layout_centerInParent="true"
                 android:layout_toEndOf="@id/swipe_circle_img"
-                android:layout_toRightOf="@id/swipe_circle_img"/>
+                android:layout_toRightOf="@id/swipe_circle_img" />
 
             <ImageView
                 android:id="@+id/swipe_arrow_2"
@@ -171,7 +178,7 @@
                 android:src="@drawable/swipe_arrow"
                 android:layout_centerInParent="true"
                 android:layout_below="@id/swipe_circle_img"
-                android:rotation="90"/>
+                android:rotation="90" />
 
             <ImageView
                 android:id="@+id/swipe_arrow_3"
@@ -181,7 +188,7 @@
                 android:rotation="180"
                 android:layout_centerInParent="true"
                 android:layout_toStartOf="@id/swipe_circle_img"
-                android:layout_toLeftOf="@id/swipe_circle_img"/>
+                android:layout_toLeftOf="@id/swipe_circle_img" />
 
             <ImageView
                 android:id="@+id/swipe_arrow_4"
@@ -190,7 +197,7 @@
                 android:src="@drawable/swipe_arrow"
                 android:rotation="270"
                 android:layout_centerInParent="true"
-                android:layout_above="@id/swipe_circle_img"/>
+                android:layout_above="@id/swipe_circle_img" />
 
         </RelativeLayout>
     </RelativeLayout>
