--- a/app/src/main/res/layout/line_graph_tooltip.xml
+++ b/app/src/main/res/layout/line_graph_tooltip.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -15,6 +14,6 @@
         android:layout_marginRight="5dp"
         android:gravity="center_horizontal"
         android:textColor="#ffffff"
-        android:textSize="16sp"/>
+        android:textSize="16sp" />
 
 </RelativeLayout>
