--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -25,7 +25,7 @@
 
     <style name="home_card_view">
         <item name="android:layout_width">0dp</item>
-        <item name="android:layout_height">130dp</item>
+        <item name="android:layout_height">125dp</item>
         <item name="android:layout_weight">1</item>
         <item name="android:foreground">?android:attr/selectableItemBackground</item>
         <item name="android:clickable">true</item>
@@ -68,9 +68,8 @@
     </style>
 
     <style name="home_toolbar_text">
-        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:textSize">20sp</item>
         <item name="android:textColor">@color/white</item>
     </style>
 
